--- a/templates/edit.html
+++ b/templates/edit.html
@@ -36,8 +36,8 @@
                         {% endif %}
                     {% endwith %} 
                 </div>
-                 <input id="publish_note" class="submit" type="submit" name="note_submit" value="发 表" tabindex="2"/>
-                <a href="" class="cancel">取 消</a>
+                <input id="publish_note" class="submit" type="submit" name="note_submit" value="发 表" tabindex="2"/>
+                <a href="/latest" class="cancel">取 消</a>
             </div>
         </form>
     </div>
