--- a/static/css/base.css
+++ b/static/css/base.css
@@ -75,12 +75,26 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .name {
     position:relative;
     float:right;
-    right:160px;
+    right:165px;
     margin:8px 4px;
     font-size:12px;
     color:#5A5758;
 }
+.topcreate {
+    position:relative;
+    float:right;
+    right:160px;
+    margin:8px 4px;
+    font-size:12px;
+}
 .setting { 
+    position:relative;
+    float:right;
+    right:155px;
+    margin:8px 4px;
+    font-size:12px;
+}
+.out {
     position:relative;
     float:right;
     right:150px;
@@ -90,7 +104,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .mybook {
     position:relative;
     float:right;
-    right:155px;
+    right:170px;
     margin:8px 4px;
     font-size:12px;
 }
