--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -18,7 +18,7 @@
         <span class="wrap">
             <p style="font-size:14px; color:#5F6568">柠檬的诞生</p>
         </span>
-        <div style="indent; font-size:13px;">
+        <div style="indent; font-size:12px;color:#8C979F">
             <br/>lemonbook now is a website based on flask. You can write dowm your mood or things happened around you everyday by using it. If you could persist in writing all the time, you will pleasantly surprised to find that your life is just like a wonderful book! No matter what the circumstances are, you will find that your life is not boring, sometimes it is so exciting!<br/>
             Maybe, you have forgotten the things happened on the day last year, it may be the first time you met each other, it may be a long talk with your friend sat side by side, it may be the day you started a new travel... Anyway, recording these interesting moments...<br/>
             Do not let the life take away those beautiful things..<br/><br/>
@@ -26,7 +26,7 @@
         <span class="wrap">
             <p style="font-size:14px; color:#5F6568">参与柠檬</p>
         </span>
-        <div style="indent;font-size:12px">
+        <div style="indent;font-size:12px;color:#8C979F">
             <br/>这里该说写什么呢？<br/>
             想好了再说..<br/>
         </div>
