--- a/templates/register.html
+++ b/templates/register.html
@@ -59,11 +59,11 @@
     <ul id="side-nav" class="aside">
         <li>
             > 已经有柠檬帐号？
-            <a href="/login" rel="nofollow">点击登录</a>
+            <a href="{{ url_for('login' )}}" rel="nofollow">点击登录</a>
         </li>
         <li>
             > 
-            <a href="/about/app" target="_blank">点击下载柠檬移动应用</a>
+            <a href="{{ url_for('app') }}" target="_blank">点击下载柠檬移动应用</a>
     </ul>
 </div>
 <script>
