--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
                     <dl class="footer_nav">
                         <dt>lemon</dt>
                         <dd>
-                        <a href="/about/aboutme" target="_blank">About me</a>
+                        <a href="{{ url_for('aboutme') }}" target="_blank">About me</a>
                         </dd>
                         <dd>
                         <a href="http://liontree.github.io/" target="_blank">Blog</a>
@@ -98,13 +98,13 @@
                     <dl class="footer_nav">
                         <dt>Applications</dt>
                         <dd>
-                        <a href="#">for ios</a>
+                        <a href="{{ url_for('app') }}">for ios</a>
                         </dd>
                         <dd>
-                        <a href="#">for Android</a>
+                        <a href="{{ url_for('app') }}">for Android</a>
                         </dd>
                         <dd>
-                        <a href="#">for windows phone</a>
+                        <a href="{{ url_for('app') }}">for windows phone</a>
                         </dd>
                     </dl>
                     <dl class="footer_nav">
