--- a/static/css/base.css
+++ b/static/css/base.css
@@ -188,13 +188,13 @@ color:#777777;
 font-family:arial;
 font-size:15px;
 font-weight:bold;
-padding:6px 18px;
+padding:6px 54px;
 text-decoration:none;
 
 text-shadow:0px 1px 0px #ffffff;
 float:right;
 position:relative;
-right:0;
+right:15px;
 }
 .signinButton:hover {
 
@@ -254,72 +254,25 @@ top:1px;
 	margin: 10px 35px 0 35px;	
 }
 .firstleft{
-	margin: 35px 10px;
+	margin: 70px 0 0;
 	float: left;
+    width:400px;
 }
+
 .firstright{
 	float: right;
-    margin: 50px 37px;
-    font-size: 13px;
-    color: #AAB0B5;
-    width: 280px;
-    height: 240px;
+    margin: 50px 0;
 }
 .secondleft{
-    margin: 30px 75px;
-    width: 240px;
-    height: 250px;
-    float: left;	
-    font-size: 13px;
-    color: #AAB0B5;
+    margin: 30px 0;
+    float: left;
 }
 .secondright{
-	margin: 30px 40px;
+	margin: 30px;
 	float: right;
-}
-.thirdleft{
-	float: left;
-	margin:35px 10px;
-	}
-.thirdright{
-	float: right;
-	margin:50px 37px;
-	font-size: 13px;
-	color: #AAB0B5;
-	height: 240px;
-	width: 260px;
-}
-.fourthimg{
-    background-image:url('../img/bookback_mini.png');
-    background-repeat:no-repeat;
-    height:350px;
-    width:540px;
-    margin:0 190px;
-}
-.fourthleft{
-    float:left;
-    font-size:13px;
-    color: #AAB0B5;
-    height:190px;
-    width:150px;
-    margin:60px 0px 0 60px;
-}
-.fourthright{
-    float:right;
-    font-size;13px;
-    color: #AAB0B5;
-    height: 190px;
-    width: 150px;
-    margin:60px 60px 0 0;
-}
-	
-.fourthright a{
-	color: #4183C4;
-    text-decoration: none;
-}
-.fourthright a:hover {
-	color: #FF8700;
-    text-decoration: none;
+    width:230px;
+    font-size:20px;
+    color:#8C979F;
 }
 .content {
     padding: 0;
