--- a/templates/latest.html
+++ b/templates/latest.html
@@ -42,7 +42,7 @@
 {% endblock %}
 {% block content %}
 {% if contents %}
-<div style="float:right; width:600px; height:800px;overflow:hidden;margin:40px 10px 40px 0">
+<div style="float:right; width:600px;overflow:hidden;margin:40px 10px 40px 0">
 <pre>{{ contents }}</pre>
 </div>
 <p style="float:left; margin:40px 0">Date: <input type="text" id="datepicker" /></p>
