--- a/templates/login.html
+++ b/templates/login.html
@@ -37,7 +37,7 @@
                     <p class="remember">
                         <input id="remember" name="remember" value="yes" tabindex="4" type="checkbox">
                         <label for="remember" class="remember">下次自动登录</label>
-                        <a href="#">忘记密码了</a>
+                        <a href="{{ url_for('reset') }}">忘记密码了</a>
                     </p>    
                 </div>
                 <div class="item">
