--- a/templates/register.html
+++ b/templates/register.html
@@ -14,11 +14,9 @@
     <p style="font-size:24px;">欢迎加入</p>
     <div class="article">
         <form id="lzform" name="lzform" method="post" action="" onsubmit="return validateForm(this);">
-	    <input name="source" value="simple" type="hidden">
-            <input name="redir" value="" type="hidden">
             <div class="item">
                 <label>帐号</label>
-                <input style="color: rgb(204, 204, 204);" id="email" name="email" class="basic-input" maxlength="64" value="邮箱/手机号" tabindex="1" type="text"/>
+                <input style="color: rgb(204, 204, 204);" id="email" name="email" class="basic-input" maxlength="64" value="邮箱" tabindex="1" type="text"/>
                 {% with messages = get_flashed_messages() %}
                     {% if messages %}
                         {% for message in messages %}
@@ -30,7 +28,6 @@
             <div class="item">
                 <label>密码</label>
                 <input id="password" name="password" class="basic-input" maxlength="16" tabindex="2" type="password"/>
-                <span style="color:#008500;margin-left:10px; visibility:hidden" id="pw">6-18位字符,包括数字，字母，下划线
             </div>
             <div class="item">
                 <label>昵称</label>
@@ -70,7 +67,7 @@
 <script>
     ;(function(doc){
 	var $ = function(id) { return doc.getElementById(id); };
-	var placeholder = '邮箱/手机号';
+	var placeholder = '邮箱';
 	var email = $('email'), password = $('password'), username = $('username'), displayid = $('displayid');
 	email.onfocus = function(){
 	if ( this.value == placeholder ) {
@@ -139,7 +136,10 @@
 	if (passwd && passwd.value === '') {
 	displayError(passwd, '请输入密码');
 	error = 1;
-	} else {
+    } else if(passwd && passwd.value != ''){
+    displayError(passwd, '6-18位字符,包括数字，字母，下划线');
+    error = 1;
+    } else {
 	passwd && clearError(passwd);
 	}
 
