--- a/templates/latest.html
+++ b/templates/latest.html
@@ -22,6 +22,35 @@
         width: 40em;
         width: 70ch;
     }
+    .select {
+        -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+        -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+        box-shadow:inset 0px 1px 0px 0px #ffffff;
+        background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9) );
+        background:-moz-linear-gradient( center top, #f9f9f9 5%, #e9e9e9 100% );
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9');
+        background-color:#f9f9f9;
+        -moz-border-radius:9px;
+        -webkit-border-radius:9px;
+        border-radius:9px;
+        border:1px solid #dcdcdc;
+        display:inline-block;
+        color:#666666;
+        font-family:arial;
+        font-size:13px;
+        font-weight:bold;
+        padding:2px 10px;
+        text-decoration:none;
+        text-shadow:1px 1px 0px #ffffff;
+    }.select:hover {
+        background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9) );
+        background:-moz-linear-gradient( center top, #e9e9e9 5%, #f9f9f9 100% );
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9');
+        background-color:#e9e9e9;
+    }.select:active {
+        position:relative;
+        top:1px;
+    }
 </style>
 <script>
   $(function() {
@@ -39,7 +68,12 @@
 <div style="float:right; width:600px;overflow:hidden;margin:40px 10px 40px 0">
 <pre>{{ contents }}</pre>
 </div>
-<p style="float:left; margin:40px 0">Date: <input type="text" id="datepicker" /></p>
+<div style="float:left; margin:40px 0">Date:
+    <form method="post" action="">
+        <input type="text" id="datepicker" name="date"/>
+        <input type="submit" class="select" value="查 询"/>
+    </form>
+</div>
 {% else %}
 <p style="font-size:30px;color:#8C979F;margin:100px 240px">
 这里还没有记录，现在<a href="{{ url_for('create') }}">开始</a>吧？</p>
