--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         <div class="header header-logged-out">
             {% block header %}
                 <div class="container clearfix">
-                    <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/titlelogo.png"/></a>
+                    <img  class="header-logo-wordmark" border="0" src="../static/img/titlelogo.png"/>
                 </div>
             {% endblock %}
         </div>
