--- a/templates/date.html
+++ b/templates/date.html
@@ -2,15 +2,46 @@
 {% block title %}按日期查询{% endblock %}
 {% block head %}
 {{ super() }}
+<style type="text/css">
+    pre {
+        font-size:13px;
+        color:#575B5D;
+        white-space: pre-wrap;
+        width: 70ch;
+        height:200px;
+        overflow:hidden;
+    }
+    .key {
+        float:left;
+        font-size:16px;
+        color:#7BCBCB;
+        margin:0 30px;
+    }
+    .value {
+        margin:60px 0;
+    }
+    a {
+        color: #4183C4;
+        text-decoration: none;
+        margin:5px 208px;
+    }
+    a:hover{
+        color:#FF8700;
+        text-decoration: none;
+    }
+</style>
 {% endblock %}
 {% block content %}
 {% if contents %}
-    {% for content in contents %}
-        <li>
-        {{ content }}   
-        </li>
+    {% for key,value in contents.iteritems() %}
+    <dt class="key">{{ key }}</dt>
+    <dd class="value">
+        <pre>{{ value }}</pre>
+    <a href="">点击查看详情</a>
+    </dd>
     {% endfor %}
+<script >
 {% else %}
-<p>您查询的日期没有记录</p>
+<p style="font-size:30px;color:#A1A2A4;margin:100px 0;">您查询的日期没有记录</p>
 {% endif %}
 {% endblock %}
