--- a/templates/edit.html
+++ b/templates/edit.html
@@ -13,7 +13,10 @@
 <div id="content">
     <p style="font-size:24px;">添加随笔</p><br/>
     <div class="article">
+        <!--
         <form id="form_note" method="post enctype=multipart/form-data" action="">
+        -->
+        <form id="form_note" method="post" action="">
             <div class="row note-text">
 		        <ul class="control-panel">
                     <li class="image-btn">
